Adicionando workflow e otra alterações

--- a/EShop.Web/Shared/CarrinhoMenu.razor
+++ b/EShop.Web/Shared/CarrinhoMenu.razor
@@ -1,7 +1,7 @@
 ﻿@implements IDisposable
 @inject ICarrinhoCompraService carrinhoCompraService
 
-<a href="CarrinhoCompra" class="btn btn-info">
+<a href="CarrinhoCompra" class="btn btn-danger">
     <i class="oi oi-cart"></i>
     <span class="badge bg-dark">@carrinhoCompraItemContador</span>
 </a>
